--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_screenutil:
   dots_indicator:
   font_awesome_flutter: ^10.7.0
+  fl_chart: 0.67.0
 
 
   # The following adds the Cupertino Icons font to your application.
