--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   cloud_firestore: ^4.15.9
   firebase_storage: ^11.6.11
   flutter_svg: ^2.0.10+1
+  image_picker: ^1.0.7
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
+  path: ^1.9.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
