--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.9.0
   permission_handler: ^11.3.1
+  firebase_app_check: ^0.2.1+19
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
