--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   dots_indicator:
   font_awesome_flutter: ^10.7.0
   fl_chart: 0.67.0
-
+  flutter_slidable: 3.1.0
+  awesome_notifications: ^0.9.3+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
