--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   path: ^1.9.0
   permission_handler: ^11.3.1
   firebase_app_check: ^0.2.1+19
+  carousel_slider: ^4.2.1
+  getwidget: ^4.0.0
 
 dev_dependencies:
   flutter_test:
