--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   permission_handler: ^11.3.1
   firebase_app_check: ^0.2.1+19
   carousel_slider: ^4.2.1
-  getwidget: ^4.0.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
